[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalabutils"
version = "0.1.0"
description = "Utility functions from UCLA Astrophysics Data Lab"
readme = "README.rst"
authors = [
  {name = "Tuan Do", email = "tdo@astro.ucla.edu"}
]
maintainers = [
  {name = "Tuan Do", email = "tdo@astro.ucla.edu"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
    "python>=3.10",
    "matplotlib",
    "pandas",
    "seaborn",
    "tabulate",
    "scikit-learn",
    "astropy",
    "scipy"  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/astrodatalab/datalabutils/issues"
changelog = "https://github.com/astrodatalab/datalabutils/blob/master/changelog.md"
homepage = "https://github.com/astrodatalab/datalabutils"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

